fix: disable horizontal scroll on mobile

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -4,8 +4,16 @@ body {
   background-color: #1D1D1D;
   color: #fff;
   font-family: Poppins, sans-serif;
+
+  @include on-tablet {
+    min-width: 768px;
+  }
+  @include on-desktop {
+    min-width: 1024px;
+  }
 }
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
